2005-11-01  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_parkandannounce.c (parkandannounce_exec): supply parent channel to ast_request_and_dial so channel variables can be inherited (issue #5564)
	* include/asterisk/channel.h: add parent_channel field
	* channel.c (__ast_request_and_dial): use parent_channel field to inherit variables into new channel

	* apps/app_cut.c (cut_internal): use ast_separate_app_args() instead of open code (issue #5560)

	* apps/app_mixmonitor.c (launch_monitor_thread): ast_strlen_zero can handle NULL input (issue #5561)
	(mixmonitor_exec): same

	* res/res_features.c (ast_feature_request_and_dial): ensure that channel variables are inherited from the channel placing the call (issue #5499)

	* utils.c (getloadavg): change to using _BSD_SOURCE as the indicator for whether this function is present or not (issue #5549)
	
	* include/asterisk/utils.h (ast_slinear_saturated_add): force to be inlined whenever possible
	(ast_slinear_saturated_multiply): same
	(ast_slinear_saturated_divide): same
	(inaddrcmp): same
	* include/asterisk/strings.h (ast_strlen_zero): force to be inlined whenever possible
	* include/asterisk/compiler.h (force_inline): add macro to force inlining of functions
	
	* app.c (ast_play_and_record): use ast_silence_generator during recording if requested
	* asterisk.c: add global option to enable silence-during-record (issue #5135)
	* channel.c (silence_generator_alloc): new
	(silence_generator_release): new
	(silence_generator_generate): new
	(ast_channel_start_silence_generator): new API call to start generating silence on a channel
	(ast_channel_stop_silence_generator): parallel call to stop silence generation
	* apps/app_record.c (record_exec): use ast_silence_generator during recording if requested

2005-11-01  Kevin P. Fleming  <kpfleming@digium.com>

	* Asterisk 1.2.0-beta2 released.
